Edit main.yml file _ 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,5 @@ job:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - run: echo hello world
+      - name: Run a one-line script
+        run: echo hello world
