--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,5 @@ jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - name: Run a one-line script
-        run: echo hello world
+      - run: echo "TODAY=$(date +%y-%m-%d)" >> $GITHUB_ENV
+      - run: echo hello world, today is $TODAY
